--- a/components/banner/Banner.module.css
+++ b/components/banner/Banner.module.css
@@ -2,6 +2,25 @@
   width: 100%;
   height: 100vh;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.mainWrapper {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--black20);
+
+  height: 33.333333%;
+  border-radius: 0.375rem /* 6px */;
+  min-width: 240px;
+}
+
+
+.dos{
+  display: flex;
+  flex-direction: column;
 }
 
 .leftWrapper {
@@ -16,7 +35,13 @@
   margin-left: 2rem;
 }
 
-.left {
+.cental{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dos {
   display: flex;
   justify-content: flex-start;
   padding-left: 4rem /* 64px */;
@@ -27,22 +52,67 @@
   margin-top: 6rem /* 96px */;
 }
 
-.right {
+.uno{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.right1 {
   display: flex;
   justify-content: flex-end;
   margin-right: 3rem;
+  margin-top: 2rem;
 }
 
 .btnIniciar{
   background-color: var(--red);
-  width: 180px;
-  height: 50px;
-  border-radius: 0.5rem;
-  font-size: larger;
+  width: 150px;
+  height: 35px;
+  border-radius: 0.3rem;
+  font-size: medium;
 }
+
+.subTitle1{
+  margin-top: 3rem;
+  font-size: xxx-large;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.subTitle12{
+  font-size: xxx-large;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.subTitle2{
+   font-size: xx-large;
+}
+
+.subTitle3{
+   font-size: x-large;
+}
+
+.formIndex{
+  display: flex;
+  flex-direction: row;
+}
+
+.inputIndex{
+  width: 400px;
+  height: 55px;
+  align-content: center;
+}
+
+
+.btnInputIndex{
+  background-color: red;
+  width: 180px;
+  height: 55px;
+}
+
 
 .nseriesWrapper {
   display: flex;
+  margin-top: 6rem;
 }
 
 .firstLetter {
