--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,138 @@
-.sectionWrapper {
-  margin-top: 1.5rem;
+.container {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  background-image: linear-gradient(rgb(0 0 0 / 60%), rgb(0 0 0 / 60%)),
+    url(/static/signin-bg.jpg);
 }
 
+.mainWrapper {
+  display: flex;
+  flex-direction: column;
+  height: 33.333333%;
+  border-radius: 0.375rem /* 6px */;
+  min-width: 240px;
+}
+
+.blockRight{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 310px;
+}
+
+.dos {
+  display: flex;
+  flex-direction: column;
+}
+
+.leftWrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
+
+.imgLogo {
+  margin-top: 2rem;
+  margin-left: 2rem;
+}
+
+.cental {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.uno {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.dos {
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 4rem /* 64px */;
+  padding-right: 4rem /* 64px */;
+  height: 100%;
+  flex-direction: column;
+  margin-top: 6rem /* 96px */;
+}
+
+.btnInit {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 3rem;
+  margin-top: 2rem;
+}
+
+.btnLenguaje{
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 35px;
+  width: 75px;
+  background-color: black;
+  border: 1px solid white
+}
+
+.btnIniciar {
+  background-color: var(--red);
+  width: 150px;
+  height: 35px;
+  border-radius: 0.3rem;
+  font-size: medium;
+}
+
+.subTitle1 {
+  margin-top: 3rem;
+  font-size: xxx-large;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.subTitle12 {
+  font-size: xxx-large;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.subTitle2 {
+  font-size: xx-large;
+  margin-bottom: 2rem;
+}
+
+.subTitle3 {
+  font-size: large;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.subTitle4 {
+  font-size: large;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 1rem;
+}
+
+.formIndex {
+  display: flex;
+  flex-direction: row;
+}
+
+.inputIndex {
+  width: 470px;
+  height: 58px;
+  font-size: large;
+  align-content: center;
+  padding-left: 1rem;
+}
+
+.btnInputIndex {
+  background-color: red;
+  width: 180px;
+  height: 58px;
+  font-size: x-large;
+  font-family: Arial, Helvetica, sans-serif;
+  border-radius: 2px;
+  margin-left: 17px;
+}
