--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -31,6 +31,8 @@
   width: 100%;
   height: 100%;
 
+  margin-top: 7rem;
+
   z-index: 10;
   justify-content: center;
 }
@@ -46,9 +48,8 @@
   height: 33.333333%;
   padding-left: 3rem /* 48px */;
   padding-right: 3rem /* 48px */;
-
   border-radius: 0.375rem /* 6px */;
-  min-width: 240px;
+  min-width: 450px;
 }
 
 .signinHeader {
