--- a/styles/Video.module.css
+++ b/styles/Video.module.css
@@ -1,80 +1,14 @@
-.imgMotionWrapper {
-  position: relative;
-  display: inline-block;
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 1250px;
+  height: 850px;
+  padding: 50px;
+  margin-left: 15%;
 }
 
-.imgMotionWrapper:hover {
-  z-index: 99;
-}
-
-.smItem {
-  position: relative;
-  width: 300px;
-  min-width: 300px;
-  height: 170px;
-  min-height: 170px;
-}
-
-.mdItem {
-  position: relative;
-  width: 158px;
-  min-width: 158px;
-  height: 280px;
-  min-height: 280px;
-}
-
-.lgItem {
-  position: relative;
-  width: 218px;
-  min-width: 218px;
-  height: 434px;
-  min-height: 434px;
-}
-.container {
-  margin-right: 0.25rem /* 4px */;
-  cursor: pointer;
-}
-
-.cardImg {
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-
-  border-radius: 0.375rem /* 6px */;
-  object-fit: cover;
-
-  object-position: center;
-  display: block;
-
-  max-width: 100%;
-}
-
-.modal {
-  position: absolute;
-  /** centers modal **/
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-
-  width: 800px;
-  bottom: 40px;
-  background-color: var(--black40);
-  top: 10%;
-
-  outline: none;
-  border-radius: 10px;
-  border: 1px solid var(--shadow10);
-}
-
-/* .overlay {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-} */
-
-/** gives box shadow to the video frame **/
 .borderBoxShadow {
   -webkit-box-shadow: 0 3px 7px var(--shadow20);
   -moz-box-shadow: 0 3px 7px var(--shadow20);
@@ -86,7 +20,19 @@
   background: linear-gradient(to top, var(--black10), transparent 50%);
 }
 
-/** Makes video edges curvy **/
+.btnVolver{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+.video{
+  margin-top: 150px;
+  width: 100%;
+  height: 100%
+}
+
 .videoPlayer {
   border-radius: 10px 10px 0px 0px;
   composes: borderBoxShadow;
@@ -95,7 +41,8 @@
 /** Modal body **/
 .modalBody {
   padding: 0 3rem;
-  cursor: pointer;
+  width: 1250px;
+  height: 450px;
 }
 
 .modalBodyContent {
@@ -188,3 +135,4 @@
 .likeBtnWrapper {
   margin-right: 0.5rem /* 8px */;
 }
+
