--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -31,25 +31,30 @@
   width: 100%;
   height: 100%;
 
-  margin-top: 7rem;
-
   z-index: 10;
   justify-content: center;
+}
+
+.inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .mainWrapper {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 
   padding-bottom: 6rem;
   padding-top: 3rem /* 32px */;
   background-color: var(--black20);
 
-  height: 33.333333%;
+  height: 670px;
   padding-left: 3rem /* 48px */;
   padding-right: 3rem /* 48px */;
   border-radius: 0.375rem /* 6px */;
-  min-width: 450px;
+  width: 465px;
 }
 
 .signinHeader {
@@ -57,24 +62,46 @@
   font-weight: 700;
   font-size: 2rem;
   margin-bottom: 2rem /* 32px */;
+  margin-left: 1.5rem;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.emailInput {
+.emailInput1 {
+  border-radius: 10px;
   padding-top: 1rem /* 8px */;
   padding-bottom: 0.5rem /* 8px */;
 
   padding-left: 1rem /* 8px */;
   padding-right: 0.5rem /* 8px */;
 
-  width: 100%;
+  width: 88%;
   padding-bottom: 1rem /* 16px */;
-  color: white;
+  color: grey;
   height: 3rem /* 48px */;
   min-width: 240px;
-  font-size: 0.8rem;
+  font-size: 1rem;
   background-color: #333333;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 1.2rem;
+  border-radius: 1px solid #333333;
+}
+
+.emailInput2 {
+  border-radius: 10px;
+  padding-top: 1rem /* 8px */;
+  padding-bottom: 0.5rem /* 8px */;
+
+  padding-left: 1rem /* 8px */;
+  padding-right: 0.5rem /* 8px */;
+
+  width: 88%;
+  padding-bottom: 1rem /* 16px */;
+  color: grey;
+  height: 3rem /* 48px */;
+  min-width: 240px;
+  font-size: 1rem;
+  background-color: #333333;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .userMsg {
@@ -83,9 +110,49 @@
   color: #e86904;
 }
 
+.penultimo {
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.1rem;
+}
+
+.primeraVez {
+  color: grey;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.subLink {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.ultima {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: grey;
+  margin-top: 0.6rem;
+}
+
+.captcha {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.9rem;
+}
+
+.masInfo {
+  color: grey;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.9rem;
+  padding-left: 1.2rem;
+}
+
 .loginBtn {
   background-color: var(--red10);
-
+  font-family: Arial, Helvetica, sans-serif;
   padding-left: 3rem /* 48px */;
   padding-right: 3rem /* 48px */;
   padding-top: 0.5rem /* 8px */;
@@ -95,10 +162,42 @@
   line-height: 1.75rem /* 28px */;
 
   color: var(--white10);
-  width: 100%;
+  width: 88%;
 
   border-radius: 0.375rem /* 6px */;
-  margin-top: 1.5rem /* 24px */;
+  margin-top: 2rem /* 24px */;
+}
+
+.checkLink {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.checkBox {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  color: grey;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.85rem;
+  padding-left: 25px;
+}
+
+.checkLink {
+  margin-top: 1rem;
+  color: grey;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.85rem;
+  padding-right: 25px;
+}
+
+.btnLoginWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (min-width: 768px) {
