--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,6 +8,10 @@
     url(/static/signin-bg.jpg);
 }
 
+.sectionWrapper{
+  margin-top: 5rem;
+}
+
 .mainWrapper {
   display: flex;
   flex-direction: column;
