--- a/components/video/Video.module.css
+++ b/components/video/Video.module.css
@@ -1,14 +1,14 @@
-#body{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.container {
-  width: 1250px;
-  height: 850px;
-  padding: 50px;
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 850px;
+    padding-left: 200px;
+    padding-right: 200px;
+    margin-top: 100px;
+    padding-bottom: 100px;
 }
 
 .borderBoxShadow {
@@ -29,6 +29,27 @@
   align-items: center;
   width: 1250px;
   height: 450px;
+}
+
+.btnVolver{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin-bottom: 60px;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.wrapperVolver{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.btnVolverContent{
+  font-size: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .videoPlayer {
