--- a/styles/Video.module.css
+++ b/styles/Video.module.css
@@ -1,12 +1,13 @@
 .container{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 1250px;
-  height: 850px;
-  padding: 50px;
-  margin-left: 15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-bottom: 100px;
 }
 
 .borderBoxShadow {
@@ -20,17 +21,35 @@
   background: linear-gradient(to top, var(--black10), transparent 50%);
 }
 
-.btnVolver{
+.video {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  justify-content: flex-end;
+  justify-content: center;
+  align-items: center;
+  width: 1000px;
+  height: 550px;
 }
 
-.video{
-  margin-top: 150px;
+.btnVolver{
+  display: flex;
+  flex-direction: row;
   width: 100%;
-  height: 100%
+  margin-bottom: 15px;
+  margin-top: 50px;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.wrapperVolver{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.btnVolverContent{
+  font-size: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .videoPlayer {
@@ -40,9 +59,13 @@
 
 /** Modal body **/
 .modalBody {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 0 3rem;
-  width: 1250px;
-  height: 450px;
+  width: 1000px;
+  height: 350px;
 }
 
 .modalBodyContent {
@@ -110,29 +133,3 @@
     width: 50%;
   }
 }
-
-/** LikeDislike */
-
-.likeDislikeBtnWrapper {
-  display: flex;
-  margin-bottom: 0.75rem /* 12px */;
-  position: absolute;
-  top: 35%;
-  padding-left: 1rem /* 48px */;
-}
-
-.btnWrapper {
-  border-color: var(--white10);
-  border-style: solid;
-  border-width: 2px;
-  background-color: var(--gray40);
-  border-radius: 9999px;
-  padding: 0.5rem /* 8px */;
-  display: flex;
-  justify-content: center;
-}
-
-.likeBtnWrapper {
-  margin-right: 0.5rem /* 8px */;
-}
-
