--- a/components/footer/Footer.module.css
+++ b/components/footer/Footer.module.css
@@ -4,5 +4,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100px;
+    height: 150px;
+    border-top: 2px solid grey;
+    font-size: xx-large;
 }
