--- a/styles/Video.module.css
+++ b/styles/Video.module.css
@@ -7,7 +7,6 @@
     height: 100%;
     padding-left: 200px;
     padding-right: 200px;
-    padding-bottom: 100px;
 }
 
 .borderBoxShadow {
@@ -66,6 +65,7 @@
   padding: 0 3rem;
   width: 1000px;
   height: 350px;
+  margin-bottom: 50px;
 }
 
 .modalBodyContent {
