--- a/styles/globals.css
+++ b/styles/globals.css
@@ -70,6 +70,7 @@ button {
   --black: rgb(0, 0, 0);
   --black10: #181818;
   --black20: rgba(0, 0, 0, 0.747);
+  --netflix: rgba(0, 0, 0, 0.658);
   --black30: rgb(17, 24, 39);
   --black40: #141414;
   --black50: rgb(20, 20, 20);
